@@ -18,6 +18,119 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Random
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ArrayBlockingQueue
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|BlockingQueue
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|CompletionService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorCompletionService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|SynchronousQueue
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ThreadPoolExecutor
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -40,6 +153,36 @@ operator|.
 name|client
 operator|.
 name|HttpClient
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|http
+operator|.
+name|impl
+operator|.
+name|client
+operator|.
+name|DefaultHttpClient
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|http
+operator|.
+name|impl
+operator|.
+name|client
+operator|.
+name|DefaultHttpRequestRetryHandler
 import|;
 end_import
 begin_import
@@ -240,119 +383,6 @@ operator|.
 name|LoggerFactory
 import|;
 end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Random
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ArrayBlockingQueue
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|BlockingQueue
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|CompletionService
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ExecutorCompletionService
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|SynchronousQueue
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ThreadPoolExecutor
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|TimeUnit
-import|;
-end_import
 begin_class
 DECL|class|HttpShardHandlerFactory
 specifier|public
@@ -511,6 +541,12 @@ name|accessPolicy
 init|=
 literal|false
 decl_stmt|;
+DECL|field|useRetries
+name|boolean
+name|useRetries
+init|=
+literal|false
+decl_stmt|;
 DECL|field|scheme
 specifier|private
 name|String
@@ -581,6 +617,16 @@ name|String
 name|INIT_FAIRNESS_POLICY
 init|=
 literal|"fairnessPolicy"
+decl_stmt|;
+comment|// Turn on retries for certain IOExceptions, many of which can happen
+comment|// due to connection pooling limitations / races
+DECL|field|USE_RETRIES
+specifier|static
+specifier|final
+name|String
+name|USE_RETRIES
+init|=
+literal|"useRetries"
 decl_stmt|;
 comment|/**    * Get {@link ShardHandler} that uses the default http client.    */
 annotation|@
@@ -805,6 +851,19 @@ argument_list|,
 name|accessPolicy
 argument_list|)
 expr_stmt|;
+name|this
+operator|.
+name|useRetries
+operator|=
+name|getParameter
+argument_list|(
+name|args
+argument_list|,
+name|USE_RETRIES
+argument_list|,
+name|useRetries
+argument_list|)
+expr_stmt|;
 comment|// magic sysprop to make tests reproducible: set by SolrTestCaseJ4.
 name|String
 name|v
@@ -960,6 +1019,12 @@ argument_list|,
 name|connectionTimeout
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|useRetries
+condition|)
+block|{
 name|clientParams
 operator|.
 name|set
@@ -971,6 +1036,7 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
+block|}
 name|this
 operator|.
 name|defaultClient
@@ -982,6 +1048,31 @@ argument_list|(
 name|clientParams
 argument_list|)
 expr_stmt|;
+comment|// must come after createClient
+if|if
+condition|(
+name|useRetries
+condition|)
+block|{
+comment|// our default retry handler will never retry on IOException if the request has been sent already,
+comment|// but for these read only requests we can use the standard DefaultHttpRequestRetryHandler rules
+operator|(
+operator|(
+name|DefaultHttpClient
+operator|)
+name|this
+operator|.
+name|defaultClient
+operator|)
+operator|.
+name|setHttpRequestRetryHandler
+argument_list|(
+operator|new
+name|DefaultHttpRequestRetryHandler
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|this
 operator|.
 name|loadbalancer
