@@ -216,37 +216,6 @@ name|get
 argument_list|(
 name|HttpClientUtil
 operator|.
-name|PROP_USE_RETRY
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
-name|HttpClientUtil
-operator|.
-name|setUseRetry
-argument_list|(
-name|httpClient
-argument_list|,
-name|config
-operator|.
-name|getBool
-argument_list|(
-name|HttpClientUtil
-operator|.
-name|PROP_USE_RETRY
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|config
-operator|.
-name|get
-argument_list|(
-name|HttpClientUtil
-operator|.
 name|PROP_FOLLOW_REDIRECTS
 argument_list|)
 operator|!=
@@ -270,6 +239,25 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|// always call setUseRetry, whether it is in config or not
+name|HttpClientUtil
+operator|.
+name|setUseRetry
+argument_list|(
+name|httpClient
+argument_list|,
+name|config
+operator|.
+name|getBool
+argument_list|(
+name|HttpClientUtil
+operator|.
+name|PROP_USE_RETRY
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
 specifier|final
 name|String
 name|basicAuthUser
