@@ -887,6 +887,16 @@ operator|new
 name|ModifiableSolrParams
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|solrServerUrl
+operator|.
+name|length
+operator|>
+literal|1
+condition|)
+block|{
+comment|// we prefer retrying another server
 name|params
 operator|.
 name|set
@@ -898,6 +908,21 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|params
+operator|.
+name|set
+argument_list|(
+name|HttpClientUtil
+operator|.
+name|PROP_USE_RETRY
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 name|this
 operator|.
 name|httpClient
